meer layout verwerking

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -420,46 +420,49 @@ Deze onverenigbaarheidsvragen zijn geformuleerd in de vorm van stellingen. Je mo
                                         </section>
                                         <h3>Intake</h3>
                                         <section>
-
+<!-- 2.1.1 -->
 <h4 id="watiseenpersoonsgegeven">Wat is een persoonsgegeven?</h4>
 <h5>Het begrip persoonsgegeven</h5>
-<p>Een persoonsgegeven is “elk gegeven betreffende een geïdentificeerde of identificeerbare natuurlijke persoon”. Het gaat daarbij om gegevens die direct of indirect herleidbaar zijn tot een natuurlijk persoon. Gegevens die “mede bepalend zijn voor de wijze waarop de betrokken persoon wordt beoordeeld of behandeld” dienen te worden aangemerkt als persoonsgegevens.
+<p>Een persoonsgegeven is <em>“elk gegeven betreffende een geïdentificeerde of identificeerbare natuurlijke persoon”</em>. Het gaat daarbij om gegevens die direct of indirect herleidbaar zijn tot een natuurlijk persoon. Gegevens die <em>“mede bepalend zijn voor de wijze waarop de betrokken persoon wordt beoordeeld of behandeld”</em> dienen te worden aangemerkt als persoonsgegevens.</p>
 
-Alle gegevens die informatie kunnen verschaffen over een identificeerbare natuurlijke persoon zijn persoonsgegevens in de zin van de Wbp. De Wbp noemt de persoon wiens persoonsgegevens worden verwerkt de betrokkene. Gegevens zijn persoonsgegevens als de gegevens informatie bevatten over een natuurlijke persoon en die persoon identificeerbaar is. 
+<p>Alle gegevens die informatie kunnen verschaffen over een identificeerbare natuurlijke persoon zijn persoonsgegevens in de zin van de Wbp. De Wbp noemt de persoon wiens persoonsgegevens worden verwerkt de <em>betrokkene</em>. Gegevens zijn persoonsgegevens als de gegevens informatie bevatten over een natuurlijke persoon en die persoon identificeerbaar is.</p>
 
-Of gegevens informatie bevatten over een natuurlijke persoon blijkt meestal uit de aard van de gegevens. Dit kunnen gegevens zijn die: 
-naar hun aard feitelijke informatie over een persoon geven; 
-informatie geven over ondernemingen of organisaties
-informatie geven over voorwerpen of objecten
-
-Sommige gegevens verschaffen duidelijk feitelijke informatie over een persoon. De meest sprekende voorbeelden zijn iemands naam, geboortedatum of geslacht. Ook gegevens die een waardering over een natuurlijke persoon geven, bevatten informatie over die persoon. Je kunt daarbij denken aan iemands intelligentiequotiënt (IQ). 
-
-Wanneer is sprake van identificeerbaarheid?
-De persoon waar de gegevens betrekking op hebben, moet vervolgens wel identificeerbaar zijn. Is de betrokkene niet identificeerbaar, dan is het gegeven geen persoonsgegeven. Een persoon is identificeerbaar als je de identiteit van de persoon redelijkerwijs, zonder onevenredige inspanning kunt vaststellen. Je moet dus op de een of andere manier een verband kunnen leggen tussen het gegeven en de persoon. Soms is de identiteit eenvoudig vast te stellen: met behulp van bijvoorbeeld naam, adres en geboortedatum is dat snel gebeurd. Dit worden direct identificerende gegevens genoemd.
-
-Gegevens die van de naam zijn ontdaan, kunnen in combinatie met andere gegevens of door spontane herkenning toch weer tot een bepaald persoon leiden. Ook in dat geval is de persoon - indirect - identificeerbaar. Dat hangt wel af van de mogelijkheden die de verantwoordelijke heeft. Als door versleuteling van de gegevens en/of afspraken over de toegang tot die gegevens, daadwerkelijke identificatie redelijkerwijs is uitgesloten, is de persoon niet identificeerbaar. 
-
-Kortom: de feitelijke situatie – zoals de context van de verwerking, de technologie – zal steeds bepalend zijn voor de vaststelling of sprake is van persoonsgegevens. Om meer houvast te krijgen, kun je hier [invoegen link: https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-wbp] de uitgebreide toelichting lezen op het begrip persoonsgegeven van het College Bescherming Persoonsgegevens (CBP).
+<p>Of gegevens informatie bevatten over een natuurlijke persoon blijkt meestal uit de aard van de gegevens. Dit kunnen gegevens zijn die: 
+<ul>
+<li>naar hun aard feitelijke informatie over een persoon geven; </li>
+<li>informatie geven over ondernemingen of organisaties</li>
+<li>informatie geven over voorwerpen of objecten</li>
+</ul>
 </p>
 
+<p>Sommige gegevens verschaffen duidelijk feitelijke informatie over een persoon. De meest sprekende voorbeelden zijn iemands naam, geboortedatum of geslacht. Ook gegevens die een waardering over een natuurlijke persoon geven, bevatten informatie over die persoon. Je kunt daarbij denken aan iemands intelligentiequotiënt (IQ).</p>
+
+<h5>Wanneer is sprake van identificeerbaarheid?</h5>
+<p>De persoon waar de gegevens betrekking op hebben, moet vervolgens wel identificeerbaar zijn. Is de betrokkene niet identificeerbaar, dan is het gegeven geen persoonsgegeven. Een persoon is identificeerbaar als je de identiteit van de persoon redelijkerwijs, zonder onevenredige inspanning kunt vaststellen. Je moet dus op de een of andere manier een verband kunnen leggen tussen het gegeven en de persoon. Soms is de identiteit eenvoudig vast te stellen: met behulp van bijvoorbeeld naam, adres en geboortedatum is dat snel gebeurd. Dit worden <em>direct identificerende gegevens</em> genoemd.</p>
+
+<p>Gegevens die van de naam zijn ontdaan, kunnen in combinatie met andere gegevens of door spontane herkenning toch weer tot een bepaald persoon leiden. Ook in dat geval is de persoon - <em>indirect</em> - <em>identificeerbaar</em>. Dat hangt wel af van de mogelijkheden die de verantwoordelijke heeft. Als door versleuteling van de gegevens en/of afspraken over de toegang tot die gegevens, daadwerkelijke identificatie redelijkerwijs is uitgesloten, is de persoon niet identificeerbaar.</p>
+
+<p>Kortom: de feitelijke situatie – zoals de context van de verwerking, de technologie – zal steeds bepalend zijn voor de vaststelling of sprake is van persoonsgegevens. Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip persoonsgegeven van het College Bescherming Persoonsgegevens (CBP)</a>.
+</p>
+<!-- 2.1.2 -->
 <h4 id="watisjerol">Wat is je rol?</h4>
 <h5>Ben ik verantwoordelijke?</h5>
-<p>Als je hebt vastgesteld dat de Wbp van toepassing is op de voorgenomen gegevensverwerking, moet je je afvragen of je ook de verantwoordelijke bent. Veel van de verplichtingen van de Wbp zijn immers opgelegd aan de verantwoordelijke. De wet omschrijft  de verantwoordelijke als: de natuurlijke persoon, de rechtspersoon of ieder ander die of het bestuursorgaan dat, alleen of te samen met andere, het doel van en de middelen voor de verwerking van persoonsgegevens vaststelt (art. 1, onder d, Wbp). 
+<p>Als je hebt vastgesteld dat de Wbp van toepassing is op de voorgenomen gegevensverwerking, moet je je afvragen of je ook de verantwoordelijke bent. Veel van de verplichtingen van de Wbp zijn immers opgelegd aan de verantwoordelijke. De wet omschrijft  de verantwoordelijke als: de natuurlijke persoon, de rechtspersoon of ieder ander die of het bestuursorgaan dat, alleen of te samen met andere, het doel van en de middelen voor de verwerking van persoonsgegevens vaststelt (art. 1, onder d, Wbp).</p>
 
-Het doel en de middelen van verwerking
-De verantwoordelijke is dus degene die formeel-juridisch de bevoegdheid heeft om doel en middelen te bepalen. Het gaat dan dus niet om degene die feitelijk de beslissingen neemt, niet om jou als persoon,maar om de rechtspersoon, de natuurlijke persoon, het bestuursorgaan of ieder ander die formeel bevoegd is deze beslissingen te nemen. Die is de verantwoordelijke. Als dit meerdere (rechts)personen zijn, is er sprake van gezamenlijke verantwoordelijkheid. 
+<h5>Het doel en de middelen van verwerking</h5>
+<p>De verantwoordelijke is dus degene die formeel-juridisch de bevoegdheid heeft om doel en middelen te bepalen. Het gaat dan dus niet om degene die feitelijk de beslissingen neemt, niet om jou als persoon,maar om de rechtspersoon, de natuurlijke persoon, het bestuursorgaan of ieder ander die formeel bevoegd is deze beslissingen te nemen. Die is de verantwoordelijke. Als dit meerdere (rechts)personen zijn, is er sprake van gezamenlijke verantwoordelijkheid.</p>
 
-De maatstaven in het maatschappelijk verkeer
-Als het niet duidelijk is wie formeel-juridisch de bevoegdheid of zeggenschap heeft, moet je naar het tweede criterium kijken: degene aan wie de verwerking naar de maatstaven die in het maatschappelijk verkeer gelden, moet worden toegerekend. Wat de in het maatschappelijk verkeer geldende maatstaven zijn, is moeilijk te zeggen: het zal van de feitelijke situatie afhangen. Dit criterium is opgenomen omdat het voor burgers soms moeilijk te bepalen is wie formeel-juridisch de bevoegdheid heeft.
+<h5>De maatstaven in het maatschappelijk verkeer</h5>
+<p>Als het niet duidelijk is wie formeel-juridisch de bevoegdheid of zeggenschap heeft, moet je naar het tweede criterium kijken: degene aan wie de verwerking naar de maatstaven die in het maatschappelijk verkeer gelden, moet worden toegerekend. Wat de in het maatschappelijk verkeer geldende maatstaven zijn, is moeilijk te zeggen: het zal van de feitelijke situatie afhangen. Dit criterium is opgenomen omdat het voor burgers soms moeilijk te bepalen is wie formeel-juridisch de bevoegdheid heeft.</p>
 
-Om meer houvast te krijgen, kun je hier [invoegen link: https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-d-wbp] de uitgebreide toelichting lezen op het begrip verantwoordelijke van het College Bescherming Persoonsgegevens (CBP).
+<p>Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-d-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip verantwoordelijke van het College Bescherming Persoonsgegevens (CBP)</a>.</p>
 
-Bewerker
-Als verantwoordelijke hoeft je niet feitelijk zelf de gegevens te verwerken. Van belang is of je bepaalt welke gegevens worden verwerkt, hoe lang, met welke middelen en voor welk doel. Verwerkt je gegevens ten behoeve van een ander, dan ben je wellicht de bewerker. De “bewerker” is: degene die ten behoeve van de verantwoordelijke persoonsgegevens verwerkt, zonder aan zijn rechtstreeks gezag te zijn onderworpen (art. 1, onder e, Wbp).
+<h5>Bewerker</h5>
+<p>Als verantwoordelijke hoeft je niet feitelijk zelf de gegevens te verwerken. Van belang is of je bepaalt welke gegevens worden verwerkt, hoe lang, met welke middelen en voor welk doel. Verwerkt je gegevens ten behoeve van een ander, dan ben je wellicht de bewerker. De “bewerker” is: degene die ten behoeve van de verantwoordelijke persoonsgegevens verwerkt, zonder aan zijn rechtstreeks gezag te zijn onderworpen (art. 1, onder e, Wbp).</p>
 
-Je bent dus bewerker als je ten behoeve van een verantwoordelijke persoonsgegevens verwerkt zonder dat je rechtstreeks onder het gezag van die verantwoordelijke staat. Als bewerker heb je dus geen zeggenschap over de gegevensverwerking, maar handel je naar de instructies en onder verantwoordelijkheid van de verantwoordelijke. Bepalend is dus je positie ten opzichte van de verantwoordelijke en de mate van zeggenschap die je over de gegevensverwerking hebt.
+<p>Je bent dus bewerker als je ten behoeve van een verantwoordelijke persoonsgegevens verwerkt zonder dat je rechtstreeks onder het gezag van die verantwoordelijke staat. Als bewerker heb je dus geen zeggenschap over de gegevensverwerking, maar handel je naar de instructies en onder verantwoordelijkheid van de verantwoordelijke. Bepalend is dus je positie ten opzichte van de verantwoordelijke en de mate van zeggenschap die je over de gegevensverwerking hebt.</p>
 
-Om meer houvast te krijgen, kun je hier [invoegen link: https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-e-wbp] de uitgebreide toelichting lezen op het begrip bewerker van het College Bescherming Persoonsgegevens (CBP). </p>
+<p>Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-e-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip bewerker van het College Bescherming Persoonsgegevens (CBP)</a>.</p>
                                             <fieldset>
                                                 <legend>Intake</legend>                                         
                                                 <label for="userName-3">dddd</label>
