fixen voor correctie, genereren html, layout en eindresultaat berekenen

--- a/src/csv/gevolgen.html
+++ b/src/csv/gevolgen.html
@@ -1,53 +1,53 @@
-<div id='verwantschap-16' class="radioQuestion">
+<div id='onverenigbaarheid-16' class="radioQuestion score">
                                                     <div class="checkboxIntro">16. De voorgenomen verwerking vindt plaats (ter voorbereiding van) het maken van algemeen beleid                                   
                                                         <div class="inputarea">  
-                                                            <input id="verwantschap-16-nee" name="verwantschap-16" type="radio" value="2" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-16-nee">nee</label> 
+                                                            <input id="onverenigbaarheid-16-nee" name="onverenigbaarheid-16" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-16-nee">nee</label> 
 
-                                                            <input id="verwantschap-16-ja" name="verwantschap-16" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-16-ja">ja</label>
+                                                            <input id="onverenigbaarheid-16-ja" name="onverenigbaarheid-16" type="radio" value="2" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-16-ja">ja</label>
 
-                                                            <input id="verwantschap-16-nvt" name="verwantschap-16" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-16-nvt">n.v.t.</label>
+                                                            <input id="onverenigbaarheid-16-nvt" name="onverenigbaarheid-16" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-16-nvt">n.v.t.</label>
                                                         </div>                                                       
                                                     </div>
                                                     <button onclick="toggleExtraInfo(this)">Info &raquo;</button>
                                                     <div class="extrainfo">Naarmate de voorgenomen verwerking meer gericht is op het formuleren van algemeen beleid, in plaats van het voorbereiden en nemen van concrete beslissingen over individuele personen, zal deze minder snel onverenigbaar zijn.</div>
                                                 </div>
 
-<div id='verwantschap-17' class="radioQuestion">
+<div id='onverenigbaarheid-17' class="radioQuestion score">
                                                     <div class="checkboxIntro">17. De nieuwe verwerking is gericht op het nemen van concrete beslissingen over (een groep) aanwijsbare personen.                                   
                                                         <div class="inputarea">  
-                                                            <input id="verwantschap-17-nee" name="verwantschap-17" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-17-nee">nee</label> 
+                                                            <input id="onverenigbaarheid-17-nee" name="onverenigbaarheid-17" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-17-nee">nee</label> 
 
-                                                            <input id="verwantschap-17-ja" name="verwantschap-17" type="radio" value="2" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-17-ja">ja</label>
+                                                            <input id="onverenigbaarheid-17-ja" name="onverenigbaarheid-17" type="radio" value="2" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-17-ja">ja</label>
 
-                                                            <input id="verwantschap-17-nvt" name="verwantschap-17" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-17-nvt">n.v.t.</label>
+                                                            <input id="onverenigbaarheid-17-nvt" name="onverenigbaarheid-17" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-17-nvt">n.v.t.</label>
                                                         </div>                                                       
                                                     </div>
                                                     <button onclick="toggleExtraInfo(this)">Info &raquo;</button>
                                                     <div class="extrainfo">Spiegelbeeld van de vorige vraag: naarmate de voorgenomen verwerking meer gericht is op het voorbereiden en nemen van concrete beslissingen over individuele personen, in plaats van het formuleren van algemeen beleid, zal deze sneller onverenigbaar zijn.</div>
                                                 </div>
 
-<div id='verwantschap-18' class="radioQuestion">
+<div id='onverenigbaarheid-18' class="radioQuestion score">
                                                     <div class="checkboxIntro">18. De in de vorige vraag geïdentificeerde aanwijsbare persoon en/of groep van personen, zal een voordeel hebben bij de nieuwe werking.                                   
                                                         <div class="inputarea">  
-                                                            <input id="verwantschap-18-nee" name="verwantschap-18" type="radio" value="1.5" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-18-nee">nee</label> 
+                                                            <input id="onverenigbaarheid-18-nee" name="onverenigbaarheid-18" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-18-nee">nee</label> 
 
-                                                            <input id="verwantschap-18-ja" name="verwantschap-18" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-18-ja">ja</label>
+                                                            <input id="onverenigbaarheid-18-ja" name="onverenigbaarheid-18" type="radio" value="1.5" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-18-ja">ja</label>
 
-                                                            <input id="verwantschap-18-nvt" name="verwantschap-18" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-18-nvt">n.v.t.</label>
+                                                            <input id="onverenigbaarheid-18-nvt" name="onverenigbaarheid-18" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-18-nvt">n.v.t.</label>
                                                         </div>                                                       
                                                     </div>
                                                     <button onclick="toggleExtraInfo(this)">Info &raquo;</button>
                                                     <div class="extrainfo">De voorgenomen verwerking kan tot doel hebben betrokkenen voordeel te verschaffen. Denk hierbij aan het identificeren van personen die recht hebben op een subsidie. In zo'n geval zal de voorgenomen verwerking minder snel onverenigbaar zijn dan in het geval er nadelige gevolgen (kunnen) ontstaan voor betrokkenen.</div>
                                                 </div>
 
-<div id='verwantschap-19' class="radioQuestion">
+<div id='onverenigbaarheid-19' class="radioQuestion score">
                                                     <div class="checkboxIntro">19. De in de vorige vraag geïdentificeerde aanwijsbare persoon en/of groep van personen, zal mogelijk nadeel ondervinden van de nieuwe werking.                                     
                                                         <div class="inputarea">  
-                                                            <input id="verwantschap-19-nee" name="verwantschap-19" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-19-nee">nee</label> 
+                                                            <input id="onverenigbaarheid-19-nee" name="onverenigbaarheid-19" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-19-nee">nee</label> 
 
-                                                            <input id="verwantschap-19-ja" name="verwantschap-19" type="radio" value="1.5" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-19-ja">ja</label>
+                                                            <input id="onverenigbaarheid-19-ja" name="onverenigbaarheid-19" type="radio" value="1.5" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-19-ja">ja</label>
 
-                                                            <input id="verwantschap-19-nvt" name="verwantschap-19" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="verwantschap-19-nvt">n.v.t.</label>
+                                                            <input id="onverenigbaarheid-19-nvt" name="onverenigbaarheid-19" type="radio" value="0" onchange="checkRadioQuestion(this.id, this.name, this.value)"/><label for="onverenigbaarheid-19-nvt">n.v.t.</label>
                                                         </div>                                                       
                                                     </div>
                                                     <button onclick="toggleExtraInfo(this)">Info &raquo;</button>
