fix Ajax form en uitrol voor http://privacy.locatielab.nl

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -60,7 +60,7 @@ Author: Geonovum, the Netherlands, 2015.
     <div id="page" class="set10">
         <div id="page-inner" class="set10">
             <header role="banner" id="header">
-                <a id="logo" rel="home" title="Home" href="/smartcities/">
+                <a id="logo" rel="home" title="Home" href="http://privacy.locatielab.nl/">
                     <img alt="Home" src="http://www.geonovum.nl/sites/all/themes/insiders/logo.png">
                 </a>
 
