voeg feedback link toe

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -252,7 +252,7 @@ Author: Geonovum, the Netherlands, 2015.
                                         </p>
 
                                         <h3>Verdere ontwikkeling</h3>
-                                        <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum – <a href="mailto:info@geonovum.nl?subject=Feedback privacytool">info@geonovum.nl</a> ontvangt graag suggesties vanuit het veld en zal
+                                        <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum ontvangt graag <a href="http://www.geonovum.nl/feedback-privacytool" target="_blank">suggesties</a> vanuit het veld en zal
                                             aan de hand daarvan nagaan of en zo ja in welke vorm een vernieuwde versie gemaakt kan worden.</p>
 
                                         <h2 id="detool">De tool</h2>
@@ -304,7 +304,7 @@ Author: Geonovum, the Netherlands, 2015.
                                             <p>Geonovum stelt deze tool graag en gratis en voor niets ter beschikking aan eenieder die deze wil gebruiken. Bij het maken van deze tool heeft Geonovum haar best gedaan fouten te voorkomen. Het kan evenwel niet
                                                 worden uitgesloten dat de tool fouten bevat of bij concrete toepassing in de praktijk tot indicaties leidt die niet kloppen. Dit is nu inherent aan een tool – het is een hulpmiddel dat een groot aantal gevallen
                                                 probeert te beslaan maar ieder geval is natuurlijk uniek – maar vooral ook aan de Wbp die immers een zeer abstracte regeling is. Gebruikers worden aangemoedigd eventuele (vermeende) tekortkomingen te delen
-                                                met Geonovum door daarover een email te sturen aan <a href="mailto:info@geonovum.nl?subject=Feedback privacytool">info@geonovum.nl</a>. <b> Thijs: TODO: link naar feedback formulier op Geonovum website</b></p>
+                                                met Geonovum via <a href="http://www.geonovum.nl/feedback-privacytool" target="_blank">het feedback formulier</a>.</p>
 
                                         </section>
 
@@ -1441,10 +1441,9 @@ indien behaalde score &gt; 50% -->
                                                         <li>de Wbp nu eenmaal abstract is en ondanks de concretiseringslag die de tool maakt, het uiteindelijk gaat om een eigen inschatting;</li>
                                                         <li>die abstractie er ook toe leidt dat de adviezen om tekortkomingen op te lossen nimmer heel concreet kunnen worden.</li>
                                                     </ul>
-
-
+                                                    
                                                     <h4>Verdere ontwikkeling</h4>
-                                                    <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum - <a href="mailto:info@geonovum.nl?subject=Feedback privacytool">info@geonovum.nl</a> - ontvangt graag suggesties vanuit het
+                                                    <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum ontvangt graag suggesties, via <a href="http://www.geonovum.nl/feedback-privacytool" target="_blank">het feedback formulier</a>, vanuit het
                                                         veld en zal aan de hand daarvan nagaan of en zo ja in welke vorm een vernieuwde versie gemaakt kan worden.</p>
                                             </section>
                                             </div>
