--- a/src/www/index.html
+++ b/src/www/index.html
@@ -571,8 +571,8 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <label for="intakevragen-A-text">A. Beschrijf welke persoonsgegevens je wil gaan gebruiken voor het nieuwe doel.</label>
                                                             <button onclick="toggleExtraInfo(this)">Toelichting op vraag &raquo;</button>
                                                             <div class="extrainfo">
-                                                                Uiteraard is het heel belangrijk de persoonsgegevens goed te duiden. Let op, dit moet je dus doen voor alle verzamelingen persoonsgegevens die je wil gebruiken voor de voorgenomen verwerking. Ter inspiratie kan je hierbij kijken naar vraag 4 (en de toelichting
-                                                                daarop) van het officiele meldingsformulier vewerking persoonsgegevens [invoegen link https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf] van het CBP.</div>
+                                                                Uiteraard is het heel belangrijk de persoonsgegevens goed te duiden. Let op, dit moet je dus doen voor alle verzamelingen persoonsgegevens die je wil gebruiken voor de voorgenomen verwerking. Ter inspiratie kan je hierbij kijken naar vraag 4 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
+                                                            </div>van het CBP.</div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-A-text" name="intakevragen-A" onchange="updateIntake(this.id, this.value)"></textarea>
                                                             </div>
@@ -615,7 +615,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <div class="extrainfo">
                                                                 Ook het doel van de voorgenomen verwerking moet uiteraard vastgelegd worden. Immers, anders kunnen het oorspronkelijke doel en het nieuwe doel niet met elkaar vergeleken worden (en kan dus niet vastgesteld worden of er sprake is van 'onverenigbaarheid').
                                                                 Bij <a href="#eisenwbp">'eisen die de Wbp stelt aan doelen en grondslagen'</a> kan je hier meer over lezen. Ter inspiratie
-                                                                kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a>                                                                van het CBP.
+                                                                kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
                                                             </div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-D-text" name="intakevragen-D" onchange="updateIntake(this.id, this.value)"></textarea>
@@ -1224,7 +1224,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <button onclick="toggleExtraInfo(this)">Toelichting op vraag &raquo;</button>
                                                             <div class="extrainfo">Een branche of sector kan een gedragscode gebruiken voor de omgang met persoonsgegevens. Dit is een vorm van zelfregulering. Door een gedragscode op te stellen, maakt de branche of sector zelf
                                                                 de algemene normen uit de Wbp concreter. Het CBP kan op aanvraag een goedkeurende verklaring afgeven voor een gedragscode. De toepasselijkheid van een dergelijke code draagt positief bij
-                                                                aan de verenigbaarheid.</div>
+                                                                aan de verenigbaarheid.</div>
                                                         </div>
 
 
